--- a/trunk/bochs/config.h.in
+++ b/trunk/bochs/config.h.in
@@ -501,11 +501,11 @@ typedef Bit32u bx_phy_address;
 #define BX_MAX_BIT64U ( (Bit64u) -1           )
 #define BX_MIN_BIT64U ( 0                     )
 #define BX_MAX_BIT64S ( ((Bit64u) -1) >> 1    )
-#define BX_MIN_BIT64S ( (Bit64s)-(((Bit64u) -1) >> 1) - 1)
+#define BX_MIN_BIT64S ( (Bit64s)(1ULL << 63)  )
 #define BX_MAX_BIT32U ( (Bit32u) -1           )
 #define BX_MIN_BIT32U ( 0                     )
 #define BX_MAX_BIT32S ( ((Bit32u) -1) >> 1    )
-#define BX_MIN_BIT32S ( (Bit32s)-(((Bit32u) -1) >> 1) - 1)
+#define BX_MIN_BIT32S ( (Bit32s)(1U << 31)    )
 #define BX_MAX_BIT16U ( (Bit16u) -1           )
 #define BX_MIN_BIT16U ( 0                     )
 #define BX_MAX_BIT16S ( ((Bit16u) -1) >> 1    )
